--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="Team.html">Team</a></li>
+                <li><a href="Training.html">Training</a></li>
             </ul>
         </nav>
     </header>
