--- a/Team.html
+++ b/Team.html
@@ -35,11 +35,11 @@
                 <h3>Executives/Leadership Team</h3>
                 <figure>
                     <img src="CEO.jpg" alt="Executive 1">
-                    <figcaption>John Doe, CEO</figcaption>
+                    <figcaption>Steve Smith, CEO</figcaption>
                 </figure>
                 <figure>
                     <img src="CTO.jpeg" alt="Executive 2">
-                    <figcaption>Jane Smith, CTO</figcaption>
+                    <figcaption>David Warner, CTO</figcaption>
                 </figure>
             </article>
 
@@ -47,11 +47,11 @@
                 <h3>Marketing Team</h3>
                 <figure>
                     <img src="Marketing1.jpg" alt="Marketing 1">
-                    <figcaption>Emily Johnson, Marketing Manager</figcaption>
+                    <figcaption>Elissy Perry, Marketing Manager</figcaption>
                 </figure>
                 <figure>
                     <img src="Marketing2.jpg" alt="Marketing 2">
-                    <figcaption>Michael Brown, Social Media Specialist</figcaption>
+                    <figcaption>Kiron Pollard, Social Media Specialist</figcaption>
                 </figure>
             </article>
 
@@ -59,11 +59,11 @@
                 <h3>Sales Representatives</h3>
                 <figure>
                     <img src="Sales1.jpg" alt="Sales 1">
-                    <figcaption>Chris Green, Sales Manager</figcaption>
+                    <figcaption>Camron Green, Sales Manager</figcaption>
                 </figure>
                 <figure>
                     <img src="Sales2.jpeg" alt="Sales 2">
-                    <figcaption>Sarah White, Sales Representative</figcaption>
+                    <figcaption>Amilia Ker, Sales Representative</figcaption>
                 </figure>
             </article>
         </section>
