--- a/Training.html
+++ b/Training.html
@@ -50,7 +50,7 @@
                         <td>$25</td>
                         <td>2 hours</td>
                         <td>Room 101</td>
-                        <td>John Doe</td>
+                        <td>Steve Smith</td>
                     </tr>
                     <tr class="alt-row">
                         <td><img src="img 3.png" alt="Product 2"> Warm Mist Humidifier</td>
@@ -58,7 +58,7 @@
                         <td>$30</td>
                         <td>3 hours</td>
                         <td>Room 102</td>
-                        <td>Jane Smith</td>
+                        <td>David Warner</td>
                     </tr>
                     <tr>
                         <td><img src="img1.png" alt="Product 3"> Ultrasonic Humidifier</td>
@@ -66,7 +66,7 @@
                         <td>$35</td>
                         <td>2 hours</td>
                         <td>Room 103</td>
-                        <td>Emily Johnson</td>
+                        <td>Elissy Perry</td>
                     </tr>
                     <tr class="alt-row">
                         <td><img src="Humidifiers index.jpeg" alt="Product 4"> Evaporative Humidifier</td>
@@ -74,7 +74,7 @@
                         <td>$40</td>
                         <td>3 hours</td>
                         <td>Room 104</td>
-                        <td>Michael Brown</td>
+                        <td>Kiron Pollard</td>
                     </tr>
                     <tr>
                         <td><img src="img 2.png" alt="Product 5"> Central Humidifier</td>
@@ -82,7 +82,7 @@
                         <td>$50</td>
                         <td>4 hours</td>
                         <td>Room 105</td>
-                        <td>Chris Green</td>
+                        <td>Camron Green</td>
                     </tr>
                     <tr class="alt-row">
                         <td><img src="img1.png" alt="Product 6"> Portable Humidifier</td>
@@ -90,7 +90,7 @@
                         <td>$20</td>
                         <td>1 hour</td>
                         <td>Room 106</td>
-                        <td>Sarah White</td>
+                        <td>Amilia Ker</td>
                     </tr>
                     <tr>
                         <td><img src="img 3.png" alt="Product 7"> Travel Humidifier</td>
@@ -98,7 +98,7 @@
                         <td>$15</td>
                         <td>1 hour</td>
                         <td>Room 107</td>
-                        <td>John Doe</td>
+                        <td>Steve Smith</td>
                     </tr>
                     <tr class="alt-row">
                         <td><img src="Humidifiers index.jpeg" alt="Product 8"> Whole House Humidifier</td>
@@ -106,7 +106,7 @@
                         <td>$60</td>
                         <td>5 hours</td>
                         <td>Room 108</td>
-                        <td>Jane Smith</td>
+                        <td>David Warner</td>
                     </tr>
                     <tr>
                         <td><img src="img1.png" alt="Product 9"> Desktop Humidifier</td>
@@ -114,7 +114,7 @@
                         <td>$18</td>
                         <td>1 hour</td>
                         <td>Room 109</td>
-                        <td>Emily Johnson</td>
+                        <td>Elissy Perry</td>
                     </tr>
                     <tr class="alt-row">
                         <td><img src="img 2.png" alt="Product 10"> Personal Humidifier</td>
@@ -122,7 +122,7 @@
                         <td>$12</td>
                         <td>1 hour</td>
                         <td>Room 110</td>
-                        <td>Michael Brown</td>
+                        <td>Kiron Pollard</td>
                     </tr>
                     <tr>
                         <td><img src="img 3.png" alt="Product 11"> Industrial Humidifier</td>
@@ -130,7 +130,7 @@
                         <td>$70</td>
                         <td>6 hours</td>
                         <td>Room 111</td>
-                        <td>Chris Green</td>
+                        <td>Camron Green</td>
                     </tr>
                     <tr class="alt-row">
                         <td><img src="Humidifiers index.jpeg" alt="Product 12"> Compact Humidifier</td>
@@ -138,7 +138,7 @@
                         <td>$22</td>
                         <td>2 hours</td>
                         <td>Room 112</td>
-                        <td>Sarah White</td>
+                        <td>Amilia Ker</td>
                     </tr>
                 </tbody>
             </table>
